force-app/main/default/objects/EmailMessage/fields/Agent_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_Queue_ID__c</fullName>
    <formula>IF(Parent.Owner:User.Agent__c == TRUE, Parent.Owner:User.Agent_Queue_ID_Email_Reply_Customer__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Queue ID</label>
    <type>Text</type>
</CustomField>