force-app/main/default/objects/EmailMessage/fields/AMFS_Email_Category__c.field-meta.xml
<CustomField>
    <fullName>AMFS_Email_Category__c</fullName>
    <label>AMFS Email Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed &amp; Process</fullName>
            </value>
            <value>
                <fullName>Incompleted Data</fullName>
            </value>
            <value>
                <fullName>No Need Reply</fullName>
            </value>
            <value>
                <fullName>Double Mail</fullName>
            </value>
            <value>
                <fullName>Pending &amp; Process</fullName>
            </value>
            <value>
                <fullName>Advertisment</fullName>
            </value>
            <value>
                <fullName>Internal Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>