force-app/main/default/objects/EmailMessage/fields/AMFS_First_Forward_TIme_Duration__c.field-meta.xml
<CustomField>
    <fullName>AMFS_First_Forward_TIme_Duration__c</fullName>
    <label>AMFS First Forward TIme Duration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>