force-app/main/default/objects/EmailMessage/fields/AMFS_Handling_Time_Duration__c.field-meta.xml
<CustomField>
    <fullName>AMFS_Handling_Time_Duration__c</fullName>
    <label>AMFS Handling Time Duration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>