force-app/main/default/objects/EmailMessage/fields/AMFS_Response_Time_Meet_SLA__c.field-meta.xml
<CustomField>
    <fullName>AMFS_Response_Time_Meet_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check AMFS SLA Target
CS/Syariah/OH:&lt;= 6 hours
PBC: &lt;=3 hours</description>
    <label>AMFS Response Time Meet SLA?</label>
    <type>Checkbox</type>
</CustomField>