force-app/main/default/objects/EmailMessage/fields/AMFS_SLA_Target__c.field-meta.xml
<CustomField>
    <fullName>AMFS_SLA_Target__c</fullName>
    <formula>IF(
  CONTAINS(ToAddress, $Label.AMFS_Channel_CS), &quot;CS&quot;,
  IF(
    CONTAINS(ToAddress, $Label.AMFS_Channel_OH), &quot;OH&quot;,
    IF(
      CONTAINS(ToAddress, $Label.AMFS_Channel_PBC), &quot;PBC&quot;,
      IF(
        CONTAINS(ToAddress, $Label.AMFS_Channel_Syariah), &quot;Syariah&quot;,
        IF(
          CONTAINS(FromAddress, $Label.AMFS_Channel_CS), &quot;CS&quot;,
          IF(
            CONTAINS(FromAddress, $Label.AMFS_Channel_OH), &quot;OH&quot;,
            IF(
              CONTAINS(FromAddress, $Label.AMFS_Channel_PBC), &quot;PBC&quot;,
              IF(
                CONTAINS(FromAddress, $Label.AMFS_Channel_Syariah), &quot;Syariah&quot;,
                NULL
              )
            )
          )
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMFS SLA Target</label>
    <type>Text</type>
</CustomField>