force-app/main/default/objects/EmailMessage/fields/datevalue__c.field-meta.xml
<CustomField>
    <fullName>datevalue__c</fullName>
    <formula>text(MessageDate) + &apos;&amp;&amp;&amp;&apos; + text(Parent.CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>datevalue</label>
    <type>Text</type>
</CustomField>