force-app/main/default/objects/EmailMessage/fields/DeletedAttachmentId__c.field-meta.xml
<CustomField>
    <fullName>DeletedAttachmentId__c</fullName>
    <description>This field will contains &quot;attachmentId;attachmentId;&quot; so on.</description>
    <label>DeletedAttachmentId</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>