force-app/main/default/objects/EmailMessage/fields/DeletedAttachmentName__c.field-meta.xml
<CustomField>
    <fullName>DeletedAttachmentName__c</fullName>
    <description>This field will contains &quot;DeletedAttachmentName;DeletedAttachmentName;&quot; so on.</description>
    <label>DeletedAttachmentName</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>