force-app/main/default/objects/EmailMessage/fields/Duration_F__c.field-meta.xml
<CustomField>
    <fullName>Duration_F__c</fullName>
    <formula>IF(MessageDate_Temporary__c != null, 

IF( Last_Response_Date__c - MessageDate_Temporary__c &lt; 0,
TEXT( FLOOR( Last_Response_Date__c - MessageDate) ) &amp; &quot; days &quot;

&amp; TEXT( FLOOR( MOD( ( Last_Response_Date__c - MessageDate) * 24, 24 ) ) ) &amp; &quot; hours &quot;

&amp; IF( TEXT( ROUND( MOD( ( Last_Response_Date__c - MessageDate ) * 24 * 60, 60 ), 0 ) ) = &apos;60&apos;, &quot;0 minutes &quot;, TEXT( ROUND( MOD( ( Last_Response_Date__c - MessageDate ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes &quot;)

&amp; IF( TEXT( ROUND( MOD( (Last_Response_Date__c - MessageDate ) * 24 * 60 * 60, 60 ), 0 ) ) = &apos;60&apos;, &quot;0 seconds&quot;, TEXT( ROUND( MOD( (Last_Response_Date__c - MessageDate ) * 24 * 60 * 60, 60 ), 0 ) ) &amp; &quot; seconds&quot;),

IF(
Last_Response_Date__c - MessageDate_Temporary__c &gt; 0 ,
TEXT( FLOOR( Last_Response_Date__c - MessageDate_Temporary__c ) ) &amp; &quot; days &quot;

&amp; TEXT( FLOOR( MOD( (Last_Response_Date__c - MessageDate_Temporary__c ) * 24, 24 ) ) ) &amp; &quot; hours &quot;

&amp; IF( TEXT( ROUND( MOD( (Last_Response_Date__c - MessageDate_Temporary__c ) * 24 * 60, 60 ), 0 ) ) = &apos;60&apos;, &quot;0 minutes &quot;, TEXT( ROUND( MOD( (Last_Response_Date__c - MessageDate_Temporary__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes &quot;)

&amp; IF( TEXT( ROUND( MOD( (Last_Response_Date__c - MessageDate_Temporary__c ) * 24 * 60 * 60, 60 ), 0 ) ) = &apos;60&apos;, &quot;0 seconds&quot;, TEXT( ROUND( MOD( (Last_Response_Date__c - MessageDate_Temporary__c ) * 24 * 60 * 60, 60 ), 0 ) ) &amp; &quot; seconds&quot;)
,
&quot;&quot;

)), 

IF( Last_Response_Date__c - MessageDate &lt; 0,
TEXT( FLOOR( Last_Response_Date__c - MessageDate) ) &amp; &quot; days &quot;

&amp; TEXT( FLOOR( MOD( ( Last_Response_Date__c - MessageDate) * 24, 24 ) ) ) &amp; &quot; hours &quot;

&amp; IF( TEXT( ROUND( MOD( ( Last_Response_Date__c - MessageDate ) * 24 * 60, 60 ), 0 ) ) = &apos;60&apos;, &quot;0 minutes &quot;, TEXT( ROUND( MOD( ( Last_Response_Date__c - MessageDate ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes &quot;)

&amp; IF( TEXT( ROUND( MOD( (Last_Response_Date__c - MessageDate ) * 24 * 60 * 60, 60 ), 0 ) ) = &apos;60&apos;, &quot;0 seconds&quot;, TEXT( ROUND( MOD( (Last_Response_Date__c - MessageDate ) * 24 * 60 * 60, 60 ), 0 ) ) &amp; &quot; seconds&quot;),

IF(
Last_Response_Date__c - MessageDate &gt; 0 ,
TEXT( FLOOR( Last_Response_Date__c - MessageDate ) ) &amp; &quot; days &quot;

&amp; TEXT( FLOOR( MOD( (Last_Response_Date__c - MessageDate ) * 24, 24 ) ) ) &amp; &quot; hours &quot;

&amp; IF( TEXT( ROUND( MOD( (Last_Response_Date__c - MessageDate ) * 24 * 60, 60 ), 0 ) ) = &apos;60&apos;, &quot;0 minutes &quot;, TEXT( ROUND( MOD( (Last_Response_Date__c - MessageDate ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes &quot;)

&amp; IF( TEXT( ROUND( MOD( (Last_Response_Date__c - MessageDate ) * 24 * 60 * 60, 60 ), 0 ) ) = &apos;60&apos;, &quot;0 seconds&quot;, TEXT( ROUND( MOD( (Last_Response_Date__c - MessageDate ) * 24 * 60 * 60, 60 ), 0 ) ) &amp; &quot; seconds&quot;)
,
&quot;&quot;

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration F</label>
    <type>Text</type>
</CustomField>