force-app/main/default/objects/EmailMessage/fields/Email_diRespon__c.field-meta.xml
<CustomField>
    <fullName>Email_diRespon__c</fullName>
    <formula>AND(
   Incoming  = TRUE,
  OR(
    ISPICKVAL(Status, &quot;Sent&quot;),
    ISPICKVAL(Status, &quot;Replied&quot;),
    ISPICKVAL(Status, &quot;Forwarded&quot;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email direspon</label>
    <type>Checkbox</type>
</CustomField>