force-app/main/default/objects/EmailMessage/fields/Email_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Due_Date__c</fullName>
    <label>Email Due Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>