force-app/main/default/objects/EmailMessage/fields/Email_SLA__c.field-meta.xml
<CustomField>
    <fullName>Email_SLA__c</fullName>
    <formula>IF( isFirstEmail__c = TRUE, Parent.Email_Due_Date_In_Datetime__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email SLA</label>
    <type>DateTime</type>
</CustomField>