force-app/main/default/objects/EmailMessage/fields/First_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Date__c</fullName>
    <formula>IF( isFirstEmail__c = TRUE, Parent.Email_First_Response_Date__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Response Date (1)</label>
    <type>DateTime</type>
</CustomField>