force-app/main/default/objects/EmailMessage/fields/First_Response_Date_In_Datetime__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Date_In_Datetime__c</fullName>
    <label>First Response Date</label>
    <type>DateTime</type>
</CustomField>