force-app/main/default/objects/EmailMessage/fields/Flagging_Email_SLA__c.field-meta.xml
<CustomField>
    <fullName>Flagging_Email_SLA__c</fullName>
    <formula>if( ISNULL(First_Response_Date_In_Datetime__c) &amp;&amp;  
    NOW() &lt;= Email_Due_Date_In_Datetime__c,
   IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X5&quot;,&quot;&quot;,20,20),

if( First_Response_Date_In_Datetime__c &lt;= Email_Due_Date_In_Datetime__c,
   IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X5&quot;,&quot;&quot;,20,20),

if( ISNULL(First_Response_Date_In_Datetime__c) &amp;&amp;  
    NOW() &gt; Email_Due_Date_In_Datetime__c,
   IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X6&quot;,&quot;&quot;,20,20),

if( First_Response_Date_In_Datetime__c &gt; Email_Due_Date_In_Datetime__c,
   IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X6&quot;,&quot;&quot;,20,20),
   IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X6&quot;,&quot;&quot;,20,20)
)
)

)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flagging_Email_SLA</label>
    <type>Text</type>
</CustomField>