force-app/main/default/objects/EmailMessage/fields/Flagging_SLA__c.field-meta.xml
<CustomField>
    <fullName>Flagging_SLA__c</fullName>
    <formula>IF( isFirstEmail__c = TRUE, Parent.Flagging_Email_SLA__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flagging SLA</label>
    <type>Text</type>
</CustomField>