force-app/main/default/objects/EmailMessage/fields/InOut__c.field-meta.xml
<CustomField>
    <fullName>InOut__c</fullName>
    <formula>IF( isFirstEmail__c , 
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X9&quot;,&quot;&quot;,20,20),
IF(Incoming, 
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X8&quot;,&quot;&quot;,20,20),
IF(Incoming=false,
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6XA&quot;,&quot;&quot;,20,20), &apos;&apos;
)

  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InOut</label>
    <type>Text</type>
</CustomField>