force-app/main/default/objects/EmailMessage/fields/Interval_Email_AFI__c.field-meta.xml
<CustomField>
    <fullName>Interval_Email_AFI__c</fullName>
    <formula>IF(
(HOUR(TIMEVALUE((MessageDate + ((7*60))/1440))))&lt;10,
&quot;0&quot;+(TEXT(HOUR(TIMEVALUE((MessageDate + ((7*60))/1440))))),(TEXT(HOUR(TIMEVALUE((MessageDate + ((7*60))/1440)))))
)+ &quot;:&quot; +
IF(MINUTE(TIMEVALUE(MessageDate )) &lt; 30, &quot;00&quot;, &quot;30&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interval</label>
    <type>Text</type>
</CustomField>