force-app/main/default/objects/EmailMessage/fields/isFirstEmail__c.field-meta.xml
<CustomField>
    <fullName>isFirstEmail__c</fullName>
    <formula>IF( (MessageDate - Parent.CreatedDate) * 86400 &lt; 10 , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isFirstEmail</label>
    <type>Checkbox</type>
</CustomField>