force-app/main/default/objects/EmailMessage/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <formula>IF(
First_Response_Date_In_Datetime__c - CreatedDate &gt; 0 ,
TEXT( FLOOR( First_Response_Date_In_Datetime__c - CreatedDate ) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD( (First_Response_Date_In_Datetime__c - CreatedDate ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
&amp; TEXT( ROUND( MOD( (First_Response_Date_In_Datetime__c - CreatedDate ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes &quot;
&amp; TEXT( ROUND( MOD( (First_Response_Date_In_Datetime__c - CreatedDate ) * 24 * 60 * 60, 60 ), 0 ) ) &amp; &quot; seconds&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Time</label>
    <type>Text</type>
</CustomField>