force-app/main/default/objects/EmailMessage/fields/MessageDate_Temporary__c.field-meta.xml
<CustomField>
    <fullName>MessageDate_Temporary__c</fullName>
    <label>MessageDate Temporary</label>
    <type>DateTime</type>
</CustomField>