force-app/main/default/objects/EmailMessage/fields/Over_SLA_Email_AFI_1_Day__c.field-meta.xml
<CustomField>
    <fullName>Over_SLA_Email_AFI_1_Day__c</fullName>
    <description>IF(ISBLANK(Last_Response_Date__c), &quot;On Schedule&quot;,

IF( (Parent.Entity__c == &quot;AFI&quot; || Parent.Entity__c == &quot;ALI&quot;) &amp;&amp; Last_Response_Date__c &lt;= Target_Datetime_1_Day__c, &quot;On-Time (&lt;= 1 Hari)&quot;,

IF( (Parent.Entity__c == &quot;AFI&quot; || Parent.Entity__c == &quot;ALI&quot;) &amp;&amp; Last_Response_Date__c &gt; Target_Datetime__c &amp;&amp; Last_Response_Date__c &lt;= Target_Datetime_1_Day__c + 1, &quot;Over SLA 1 (&gt;4-24 Jam)&quot;,

IF( (Parent.Entity__c == &quot;AFI&quot; || Parent.Entity__c == &quot;ALI&quot;) &amp;&amp; Last_Response_Date__c &gt; Target_Datetime__c + 1 &amp;&amp; Last_Response_Date__c &lt;= Target_Datetime_1_Day__c + 1.5, &quot;Over SLA 2 (&gt;24-36 Jam)&quot;,

&quot;Over SLA 3 (&gt;36 Jam)&quot; ))))</description>
    <formula>IF(ISBLANK(Last_Response_Date__c), &quot;On Schedule&quot;,

IF( (Parent.Entity__c == &quot;AFI&quot; || Parent.Entity__c == &quot;ALI&quot;) &amp;&amp; Last_Response_Date__c &lt;= Target_Datetime_1_Day__c, &quot;On-Time (&lt;= 1 Hari)&quot;,

IF( (Parent.Entity__c == &quot;AFI&quot; || Parent.Entity__c == &quot;ALI&quot;) &amp;&amp; Last_Response_Date__c &gt; Target_Datetime_1_Day__c &amp;&amp; Last_Response_Date__c &lt;= Target_Datetime_1_Day__c + 0.5, &quot;Over SLA 1 (&gt;24-36 Jam)&quot;,

IF( (Parent.Entity__c == &quot;AFI&quot; || Parent.Entity__c == &quot;ALI&quot;) &amp;&amp; Last_Response_Date__c &gt; Target_Datetime_1_Day__c + 0.5 &amp;&amp; Last_Response_Date__c &lt;= Target_Datetime_1_Day__c + 1, &quot;Over SLA 2 (&gt;36-48 Jam)&quot;,

&quot;Over SLA 3 (&gt;48 Jam)&quot; ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over SLA Email AFI (1 Day)</label>
    <type>Text</type>
</CustomField>