force-app/main/default/objects/EmailMessage/fields/Over_SLA_Email_AFI_3__c.field-meta.xml
<CustomField>
    <fullName>Over_SLA_Email_AFI_3__c</fullName>
    <description>IF( (Parent.Entity__c == &quot;AFI&quot; || Parent.Entity__c == &quot;ALI&quot;) &amp;&amp; First_Response_Date_In_Datetime__c &lt;= Target_Datetime__c, &quot;On-Time (&lt;= 4 Jam) &quot; + IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X5&quot;,&quot;&quot;,20,20),

IF( (Parent.Entity__c == &quot;AFI&quot; || Parent.Entity__c == &quot;ALI&quot;) &amp;&amp; First_Response_Date_In_Datetime__c &gt; Target_Datetime__c + 4/24 &amp;&amp; First_Response_Date_In_Datetime__c &lt; Target_Datetime__c + 1, &quot;Over SLA 1 (&gt;4-24 Jam) &quot; + IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X6&quot;,&quot;&quot;,20,20) ,

IF( (Parent.Entity__c == &quot;AFI&quot; || Parent.Entity__c == &quot;ALI&quot;) &amp;&amp; First_Response_Date_In_Datetime__c &gt; Target_Datetime__c + 1 &amp;&amp; First_Response_Date_In_Datetime__c &lt; Target_Datetime__c + 1.5, &quot;Over SLA 2 (&gt;24-36 Jam) &quot; + IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X6&quot;,&quot;&quot;,20,20),
&quot;Over SLA 3 (&gt;36 Jam) &quot;+ IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X6&quot;,&quot;&quot;,20,20) )))</description>
    <formula>IF(Incoming == FALSE, IF(ISBLANK(Last_Response_Date__c),  &quot;&quot; , &quot;On Schedule&quot;),


IF(ISBLANK(Last_Response_Date__c), &quot;New Email&quot;,

IF( (Parent.Entity__c == &quot;AFI&quot; || Parent.Entity__c == &quot;ALI&quot;) &amp;&amp;  Last_Response_Date__c &lt;= Target_Datetime__c, &quot;On-Time (&lt;= 4 Jam)&quot;,

IF( (Parent.Entity__c == &quot;AFI&quot; || Parent.Entity__c == &quot;ALI&quot;) &amp;&amp; Last_Response_Date__c &gt; Target_Datetime__c &amp;&amp; Last_Response_Date__c &lt;= Target_Datetime__c + 1, &quot;Over SLA 1 (&gt;4-24 Jam)&quot;,

IF( (Parent.Entity__c == &quot;AFI&quot; || Parent.Entity__c == &quot;ALI&quot;) &amp;&amp; Last_Response_Date__c &gt; Target_Datetime__c + 1 &amp;&amp; Last_Response_Date__c &lt;= Target_Datetime__c + 1.5, &quot;Over SLA 2 (&gt;24-36 Jam)&quot;,

&quot;Over SLA 3 (&gt;36 Jam)&quot; ))))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over SLA Email AFI 3</label>
    <type>Text</type>
</CustomField>