force-app/main/default/objects/EmailMessage/fields/Over_SLA_Email_AFI__c.field-meta.xml
<CustomField>
    <fullName>Over_SLA_Email_AFI__c</fullName>
    <formula>IF( Parent.Entity__c = &quot;AFI&quot; &amp;&amp; ISNULL(First_Response_Date_In_Datetime__c) &amp;&amp; NOW() &lt;= Email_Due_Date_In_Datetime__c, &quot;On-Time (&lt;= 4 Jam) &quot; + IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X5&quot;,&quot;&quot;,20,20),

IF( Parent.Entity__c = &quot;AFI&quot; &amp;&amp; First_Response_Date_In_Datetime__c &lt;= Email_Due_Date_In_Datetime__c, &quot;On-Time (&lt;= 4 Jam) &quot; + IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X5&quot;,&quot;&quot;,20,20),

IF( Parent.Entity__c = &quot;AFI&quot; &amp;&amp; First_Response_Date_In_Datetime__c &gt; Email_Due_Date_In_Datetime__c + 4/24 &amp;&amp; First_Response_Date_In_Datetime__c &lt; Email_Due_Date_In_Datetime__c + 1, &quot;Over SLA 1 (&gt;4-24 Jam) &quot; + IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X6&quot;,&quot;&quot;,20,20) ,

IF( Parent.Entity__c = &quot;AFI&quot; &amp;&amp; First_Response_Date_In_Datetime__c &gt; Email_Due_Date_In_Datetime__c + 1 &amp;&amp; First_Response_Date_In_Datetime__c &lt; Email_Due_Date_In_Datetime__c + 1.5, &quot;Over SLA 2 (&gt;24-36 Jam) &quot; + IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X6&quot;,&quot;&quot;,20,20),
&quot;Over SLA 3 (&gt;36 Jam) &quot;+ IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X6&quot;,&quot;&quot;,20,20) ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over SLA Email AFI</label>
    <type>Text</type>
</CustomField>