force-app/main/default/objects/EmailMessage/fields/Over_SLA_Email_AMFS_2__c.field-meta.xml
<CustomField>
    <fullName>Over_SLA_Email_AMFS_2__c</fullName>
    <formula>IF( Parent.Entity__c  = &quot;AMFS&quot; &amp;&amp;  First_Response_Date_In_Datetime__c = null &amp;&amp; NOW() &lt;= Email_Due_Date_In_Datetime__c, &quot;On-Time (&lt;= 1 Hari)&quot; ,

IF( Parent.Entity__c = &quot;AMFS&quot; &amp;&amp; First_Response_Date_In_Datetime__c &lt;= Email_Due_Date_In_Datetime__c, &quot;On-Time (&lt;= 1 Hari)&quot;,

IF( Parent.Entity__c = &quot;AMFS&quot; &amp;&amp; First_Response_Date_In_Datetime__c &gt; Email_Due_Date_In_Datetime__c + 1 &amp;&amp; First_Response_Date_In_Datetime__c &lt; Email_Due_Date_In_Datetime__c + 2, &quot;Over SLA 1 (&gt; 1 Hari)&quot;,

&quot;Over SLA 2 (&gt; 2 Hari)&quot;   )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over SLA Email AMFS 2</label>
    <type>Text</type>
</CustomField>