force-app/main/default/objects/EmailMessage/fields/Over_SLA_Email_MAGI_Customer__c.field-meta.xml
<CustomField>
    <fullName>Over_SLA_Email_MAGI_Customer__c</fullName>
    <formula>IF( Parent.Entity__c  = &quot;MAGI&quot; &amp;&amp;  First_Response_Date_In_Datetime__c = null &amp;&amp; NOW() &lt;= Email_Due_Date_In_Datetime__c, &quot;On-Time (&lt;= 1 Hari) &quot; + IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X5&quot;,&quot;&quot;,20,20),

IF( Parent.Entity__c = &quot;MAGI&quot; &amp;&amp; First_Response_Date_In_Datetime__c &lt; Email_Due_Date_In_Datetime__c, &quot;On-Time (&lt;= 1 Hari) &quot; + IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X5&quot;,&quot;&quot;,20,20),



IF( Parent.Entity__c = &quot;MAGI&quot; &amp;&amp; First_Response_Date_In_Datetime__c &gt; Email_Due_Date_In_Datetime__c + 1 &amp;&amp; First_Response_Date_In_Datetime__c &lt; Email_Due_Date_In_Datetime__c + 2, &quot;Over SLA 1 (&gt;1-2 Hari) &quot; + IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X6&quot;,&quot;&quot;,20,20) ,

&quot;Over SLA 2 (&gt; 2 Hari) &quot; + IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CZ6X6&quot;,&quot;&quot;,20,20)  )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over SLA Email MAGI (Customer)</label>
    <type>Text</type>
</CustomField>