force-app/main/default/objects/EmailMessage/fields/selisih__c.field-meta.xml
<CustomField>
    <fullName>selisih__c</fullName>
    <formula>(MessageDate - Parent.CreatedDate) * 86400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>selisih</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>