force-app/main/default/objects/EmailMessage/fields/SLA_ALI__c.field-meta.xml
<CustomField>
    <fullName>SLA_ALI__c</fullName>
    <formula>FLOOR( First_Response_Date_In_Datetime__c - CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA ALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>