force-app/main/default/objects/EmailMessage/fields/Target_Datetime_1_Day__c.field-meta.xml
<CustomField>
    <fullName>Target_Datetime_1_Day__c</fullName>
    <formula>Target_Datetime__c+((24-Target_TAT__c)/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Datetime (1 Day)</label>
    <type>DateTime</type>
</CustomField>