force-app/main/default/objects/EmailMessage/fields/Target_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Target_Datetime__c</fullName>
    <description>Update, 17 Feb 2020
OLD Formula: MessageDate + (Target_TAT__c/24)</description>
    <formula>MessageDate_Temporary__c + (Target_TAT__c/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Datetime</label>
    <type>DateTime</type>
</CustomField>