force-app/main/default/objects/EmailMessage/fields/Target_Status__c.field-meta.xml
<CustomField>
    <fullName>Target_Status__c</fullName>
    <formula>IF (ISBLANK(Last_Response_Date__c),
IF (Target_Datetime__c &gt; NOW(), &apos;On Schedule&apos;, &apos;Late&apos;)
,
IF (Target_Datetime__c &gt;= Last_Response_Date__c, &apos;Meet&apos;, &apos;Late&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Status</label>
    <type>Text</type>
</CustomField>