force-app/main/default/objects/EmailMessage/fields/Target_TAT__c.field-meta.xml
<CustomField>
    <fullName>Target_TAT__c</fullName>
    <defaultValue>4</defaultValue>
    <inlineHelpText>in Hours</inlineHelpText>
    <label>Target TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>