force-app/main/default/objects/EmailMessage/fields/TAT_ALI__c.field-meta.xml
<CustomField>
    <fullName>TAT_ALI__c</fullName>
    <formula>IF ( SLA_ALI__c == 0, 1, SLA_ALI__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAT ALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>